# starhigh

./: Cargo.toml  README.md  README.ro.md  build.rs
assets/: background.ase  cloud.ase  heart.ase  help.ase  high-score.ase  pause.ase  play.ase  star.ase
src/: main.rs  world.rs
src/world/: falling_object.rs  player.rs  scoreboard.rs
