[package]
name = "starhigh-rs"
version = "0.1.0"
authors = ["Mițca Dumitru <dumitru0mitca@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
rand = "0.8.3"

[build-dependencies]
winres = "0.1.11"
